internal/static/testdata/invalid/invalid-syntax/invalid.go
package syntax

import "github.com/dogmatiq/dogma"

// Below is the deliberate illegal Go syntax to test loading of the packages
// with errors.
<This is the deliberate illegal Go syntax>

